--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
 body {
 	background-color: #2f2f2f;
 }
@@ -10,11 +16,38 @@ body {
 	background-repeat: no-repeat;
 	background-size: cover;
 	width: 100%;
-	height: 10em;
+	height: 15em;
+}
+
+#header h1 {
+	position: absolute;
+	font-family: arial, sans-serif;
+	bottom: 2px;
+	right: 2px;
+	color: #16A608;
+	text-shadow: 2px 2px 1px #222;
 }
 
 #navbar {
-	
+	width: 100%;
+	height: auto;
+	background-color: #16A608;
+}
+
+#navbar ul {
+	text-align: center;
+}
+
+#navbar ul a {
+	display: inline-block;
+	text-decoration: none;
+	list-style: none;
+	padding: 1em 4em;
+	color: #eee;
+}
+
+#navbar ul a:hover {
+	background-color: #0A7700;
 }
 
 #content {
@@ -22,6 +55,66 @@ body {
 	position: relative;
 	width: 70%;
 	background-color: #eee;
-	margin: 2em auto;
-	padding: 1.5em;
+	margin: 3em auto;
+	padding: 3em;
+}
+
+#content h2 {
+	margin-left: 2em;
+	margin-bottom: 2em;
+	font-family: helvetica, sans-serif;
+	color: #0A7700;
+}
+
+#content p, #content li {
+	font-size: .9em;
+	padding: 0.2em 0;
+}
+
+#content li {
+	margin-left: 2em;
+}
+
+#team > iframe {
+	margin-top: 3em;
+}
+
+table {
+	width: 100%;
+}
+
+td {
+	text-align: center;
+}
+
+.img {
+	width: 8em;
+	height: 8em;
+}
+
+.img img {
+	height: 100%;
+} 
+
+td > a > img {
+	width: 5em;
+	transition: .5s;
+}
+
+td > a > img:hover {
+	transform: scale(1.2, 1.2);
+	transition: .5s;
+}
+
+#footer {
+	width: 100%;
+	height: auto;
+	background-color: #16A608;
+	color: #eee;
+	text-align: center;
+}
+
+#footer p {
+	padding: 1em 0;
+	font-family: arial, sans-serif;
 }
